# katlas

./: .gitignore  CHANGELOG.md  README.md  Untitled.html  alignment.html  analyze.html  clustering.html  compare.html  core.html  data.html  dl.html  dnn.html  feature.html  hierarchical.html  index.html  lo.html  ml.html  paper_01a_preprocessing_ls.html  paper_01b_combine_datasets.html  paper_02_specificity.html  paper_03a_compare_psp_ls.html  paper_03b_correlation_st.html  paper_03c_correlation_tyr.html  paper_04_plot_heatmap_logo.html  paper_05_hierarchical_clustering.html  paper_06_aa_feature.html  paper_07a_phosphoproteomics.html  paper_07b_enrichment_atm.html  paper_08_aucdf.html  paper_09a_ml_embedding.html  paper_09b_ml_training.html  paper_09c_ml_analysis.html  paper_09d_ml_predict.html  pathway.html  plot.html  pm.html  preprocess.html  pspa.html  pssm.html  pssm_03_background.html  (+31 more)
Examples/: tutorial_00_data.html  tutorial_01_checker_scoring.html  tutorial_02_prepare_dataset.html  tutorial_03_pspa_nomalization.html  tutorial_04_plot.html
Tutorials/: tutorial_01_sinlge_input.html  tutorial_02_high_throughput.html  tutorial_03a_enrichment_akti.html
database/: combine_site_ochoa_pplus.parquet  pplus_human_site.parquet
dataset/: STkinase_info.csv  STkinase_info.parquet  T5_xl_bfd.csv  T5_xl_bfd.parquet  T5_xl_uniref50.csv  T5_xl_uniref50.parquet  T5_xl_uniref50_umap32.csv  _modify.ipynb  aa_info.csv  aa_info.parquet  aa_rdkit.csv  aa_rdkit.parquet  combine_main.parquet  combine_main_upper.parquet  coral_tree.parquet  df_esm64_aa16.parquet  esm_pca32_full.parquet  full_kinase_info.parquet  full_kinase_info.xlsx  kinase_esm.csv  kinase_esm.parquet  kinase_esm_pca32.csv  kinase_esm_pca32.parquet  kinase_info.csv  ks_datasets.parquet  ks_main.parquet  ks_main_info.parquet  ks_main_upper.parquet  ks_others.parquet  ks_others_info.parquet  log_unstack.csv  mean_unstack.csv  paper_norm.csv  paper_norm_0position.parquet  paper_raw.csv  pearson.csv  pearson.parquet  pivot_log.csv  pivot_log.parquet  pivot_standard.csv  (+18 more)
katlas/: _modidx.py  align.py  analyze.py  clustering.py  common.py  compare.py  core.py  data.py  dl.py  dlmulti.py  dnn.py  fastai.py  feature.py  hierarchical.py  imports.py  keras.py  lo.py  onehot.py  pathway.py  plot.py  pm.py  preprocess.py  pspa.py  pssm.py  score.py  scoring.py  statistics.py  train.py  utils.py
nbs/: 00_core.ipynb  00_data.ipynb  01_feature.ipynb  01_preprocess.ipynb  01_utils.ipynb  02_plot.ipynb  02_pssm.ipynb  02a_pssm_core.ipynb  02b_pssm_plot.ipynb  02c_pssm_lo.ipynb  02d_pssm_pspa.ipynb  02e_pssm_compare.ipynb  03_ML.ipynb  03_ML_trainer.ipynb  03_hierarchical.ipynb  03_plot.ipynb  03_score.ipynb  03_scoring.ipynb  03_train.ipynb  04_DL.ipynb  04_DLmodel.ipynb  04_clustering.ipynb  04_feature.ipynb  04_hierarchical.ipynb  04_lo.ipynb  05_plot.ipynb  (+94 more)
(+342 files in other folders)
